--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+.card {
+  padding: 0%;
+
+}
+
+.card-header {
+  color: #ffff1b;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+h1, h2, h3, h4, h5 {
+  color: #ffff1b;
+}
+
+.jumbotron {
+  color: #ffff1b;
+  font-size: 80px;
+  font-weight: bold;
+}
