--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #802a00;
 }
 
 .App-logo {
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #cc4400;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -43,17 +44,37 @@
 }
 
 .card-header {
-  color: #ffff1b;
+  color: #ffc450;
   font-size: 50px;
   font-weight: bold;
 }
 
-h1, h2, h3, h4, h5 {
-  color: #ffff1b;
+h1, h2, h3, h4, h5, p {
+  color: #ffc450;
 }
 
 .jumbotron {
-  color: #ffff1b;
+  color: #ffc450;
   font-size: 80px;
   font-weight: bold;
+}
+
+.meter > span {
+  display: block;
+  height: 100%;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-color: rgb(43,194,83);
+  background-image: linear-gradient(
+    center bottom,
+    rgb(43,194,83) 37%,
+    rgb(84,240,84) 69%
+  );
+  box-shadow: 
+    inset 0 2px 9px  rgba(255,255,255,0.3),
+    inset 0 -2px 6px rgba(0,0,0,0.4);
+  position: relative;
+  overflow: hidden;
 }
